Clean up Makefile
Fix distribution kit logic for detecting dirty working directory,
current tag.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.log
 *.tdy
 tmp/*
-*.tgz
 *.sig
-*.tar.gz *.tar.xz
+*.tgz *.tar.gz *.tar.xz *tar.lzop *.tar.lzma *.tar.Z *.tar.zst *.tar.bz *.tar.bz2
 ascron-*
+.tagged
